[gd_scene load_steps=22 format=3 uid="uid://o0x04nape8wr"]

[ext_resource type="Script" uid="uid://bspqi2j1thjsb" path="res://scripts/gdscript/Shuttle/shuttle.gd" id="1_6p081"]
[ext_resource type="FontFile" uid="uid://6dkd18d8i6x8" path="res://assets/fonts/CGF_Locust_Resistance/cgf-locust-resistance.regular.ttf" id="1_vjyse"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6p081"]
transparency = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt1ic"]

[sub_resource type="BoxMesh" id="BoxMesh_vjyse"]
material = SubResource("StandardMaterial3D_mt1ic")
size = Vector3(4, 2, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fi2x6"]

[sub_resource type="BoxMesh" id="BoxMesh_lehga"]
material = SubResource("StandardMaterial3D_fi2x6")
size = Vector3(4, 1.5, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lehga"]

[sub_resource type="BoxMesh" id="BoxMesh_gchcy"]
material = SubResource("StandardMaterial3D_lehga")
size = Vector3(4, 0.5, 1.25)

[sub_resource type="BoxMesh" id="BoxMesh_6p081"]
material = SubResource("StandardMaterial3D_lehga")
size = Vector3(4, 0.5, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fi2x6"]
material = SubResource("StandardMaterial3D_lehga")
size = Vector3(4, 0.5, 0.755)

[sub_resource type="BoxShape3D" id="BoxShape3D_fi2x6"]
size = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_udefq"]
size = Vector3(2, 4, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_sbs5r"]
size = Vector3(2, 4, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_6p081"]
size = Vector3(3, 4, 4)

[sub_resource type="Animation" id="Animation_udefq"]
resource_name = "Hatch_Opening"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshUpper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.558, 2.55), Vector3(5.5879354e-08, 1.3351297, 1.8994865)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshUpper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.6580628, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshLower:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.235, 2.55), Vector3(0, -2.356338, 2.5500002)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshLower:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.1415927, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sbs5r"]
resource_name = "Hatch_Closing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshUpper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5.5879354e-08, 1.3351297, 1.8994865), Vector3(0, 0.558, 2.55)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshUpper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.6580628, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshLower:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -2.356338, 2.5500002), Vector3(0, -1.235, 2.55)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshLower:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.1415927, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ugqsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshUpper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.558, 2.55)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshUpper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshLower:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.235, 2.55)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshLower:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../InnerAirlockHatch/MeshLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, -0.4, -1.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../InnerAirlockHatch/MeshRight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1, -0.4, -1.5)]
}

[sub_resource type="Animation" id="Animation_6p081"]
resource_name = "Airlock_Opening"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../InnerAirlockHatch/MeshLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, -0.4, -1.5), Vector3(2.75, -0.4, -1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../InnerAirlockHatch/MeshRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1, -0.4, -1.5), Vector3(-2.5, -0.4, -1.5)]
}

[sub_resource type="Animation" id="Animation_fi2x6"]
resource_name = "Airlock_Closing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../InnerAirlockHatch/MeshLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.5, -0.4, -1.5), Vector3(1, -0.4, -1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../InnerAirlockHatch/MeshRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-2.5, -0.4, -1.5), Vector3(-1, -0.4, -1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7nhf"]
_data = {
&"Airlock_Closing": SubResource("Animation_fi2x6"),
&"Airlock_Opening": SubResource("Animation_6p081"),
&"Hatch_Closing": SubResource("Animation_sbs5r"),
&"Hatch_Opening": SubResource("Animation_udefq"),
&"RESET": SubResource("Animation_ugqsq")
}

[node name="Shuttle" type="Node3D"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_6p081")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="corpus" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.8062417e-06, 11.750244, 6.46167)
use_collision = true
polygon = PackedVector2Array(10, 10, 10, 20, 2.5, 22.5, -2.5, 22.5, -10, 20, -10, 10, -2.5, -1.5, 2.5, -1.5)
depth = 5.0
smooth_faces = true
material = SubResource("StandardMaterial3D_6p081")

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.98480767, 0.17364816, 0, -0.17364816, 0.98480767, 0, 0, 0, 1, 7.1279545, 11.952911, -6.6893916)
operation = 2
size = Vector3(9.171753, 2, 31.311646)

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9848076, -0.17364818, 0, 0.17364816, 0.9848077, 0.03949885, 12.278168, -0.491333)
operation = 2
size = Vector3(22.517426, 2, 31.311646)

[node name="CSGBox3D11" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 1.3960686e-08, 1.1218972e-09, -1.3960686e-08, 0.9871667, 0.15969165, 1.1219043e-09, -0.15969163, 0.9871668, 0.039500363, 7.934204, -17.808533)
operation = 2
size = Vector3(4, 4.886, 5)

[node name="roof1" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 0, 0, 0, 0.99999976, 0, 0, 0, 0.9999999, 0, 11, -7.912)
operation = 2
size = Vector3(4, 5, 25.061111)

[node name="roof2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.7071067, 0, -0.7071067, 0, 0.99999976, 0, 0.7071067, 0, 0.7071067, 0, 11, -3.514)
operation = 2
size = Vector3(10, 5, 10)

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 2.9070693e-08, -2.1768187e-10, -2.8666847e-08, 0.9872976, 0.15888183, 4.8337085e-09, -0.15888178, 0.9872978, 0.039500106, 12.271408, -15.586491)
operation = 2
size = Vector3(22.517426, 2, 7.2136536)

[node name="CSGBox3D8" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9876883, -0.15643449, 0, 0.15643446, 0.9876885, 0.039500106, 6.1188354, -15.586491)
operation = 2
size = Vector3(22.517426, 2, 7.2136536)

[node name="CSGBox3D9" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.0714916e-08, -0.21255288, 0.97714967, -2.787294e-08, 0.9771494, 0.2125529, -0.99999976, -1.8581963e-08, -4.5709037e-08, -13.357569, 8.815163, -8.657689)
operation = 2
size = Vector3(22.517426, 3.4348755, 7.2136536)

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.3711374e-08, 0.21303034, 0.9770457, 0, 0.9770454, -0.21303041, -0.99999976, -9.311853e-09, -4.2708024e-08, 13.358, 8.815, -8.658)
operation = 2
size = Vector3(22.517426, 3.4348755, 7.2136536)

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9999999, 0, 0, 0, 0.98480755, 0.17364816, 0, -0.17364815, 0.98480767, 0.03949885, 6.1571646, -0.491333)
operation = 2
size = Vector3(22.517426, 2, 31.311646)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9848076, -0.17364816, 0, 0.17364816, 0.9848076, 0, 0, 0, 1, 7.128, 6.5, -6.689)
operation = 2
size = Vector3(9.171753, 2, 31.311646)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9848076, -0.17364816, 0, 0.17364816, 0.9848076, 0, 0, 0, 1, -6.8480434, 11.952911, -6.6893926)
operation = 2
size = Vector3(9.171753, 2, 31.311646)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.98480755, 0.17364815, 0, -0.17364815, 0.98480755, 0, 0, 0, 1, -6.848, 6.5, -6.689)
operation = 2
size = Vector3(9.171753, 2, 31.311646)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 6, 9.25, -15)
operation = 2
radius = 1.5
sides = 64

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 9.465, 8.017)
operation = 2
radius = 0.25
height = 0.5
sides = 64

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -6, 9.25, -15)
operation = 2
radius = 1.5
sides = 64

[node name="Hatch" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.046552967, 9.033374, -18.28144)

[node name="MeshUpper" type="MeshInstance3D" parent="Hatch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.558, 2.55)
mesh = SubResource("BoxMesh_vjyse")

[node name="Upper Hatch" type="Label3D" parent="Hatch/MeshUpper"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -0.135)
pixel_size = 0.01
text = "Upper Hatch"
font = ExtResource("1_vjyse")

[node name="MeshLower" type="MeshInstance3D" parent="Hatch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.235, 2.55)
mesh = SubResource("BoxMesh_lehga")

[node name="Lower Hatch" type="Label3D" parent="Hatch/MeshLower"]
transform = Transform3D(-0.99999994, 0, 8.742277e-08, 0, 1, 0, -8.742277e-08, 0, -0.99999994, 0, 0, -0.125)
pixel_size = 0.01
text = "Lower Hatch"
font = ExtResource("1_vjyse")

[node name="Stairs" type="MeshInstance3D" parent="Hatch/MeshLower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8428774e-08, 0.49664116, 0.5675068)
mesh = SubResource("BoxMesh_gchcy")

[node name="Stairs2" type="MeshInstance3D" parent="Hatch/MeshLower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4901161e-08, 0.18731499, 0.4256611)
mesh = SubResource("BoxMesh_6p081")

[node name="Stairs3" type="MeshInstance3D" parent="Hatch/MeshLower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1550312, 0.26855564)
mesh = SubResource("BoxMesh_fi2x6")

[node name="Lock_Unlock_Hatch" type="Area3D" parent="Hatch"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hatch/Lock_Unlock_Hatch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.0978193e-08, 0, 0.46740723)
shape = SubResource("BoxShape3D_fi2x6")

[node name="InnerAirlockHatch" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.119594e-07, 10.507935, -7)

[node name="MeshLeft" type="MeshInstance3D" parent="InnerAirlockHatch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.4, -1.5)
mesh = SubResource("BoxMesh_udefq")

[node name="Airlock" type="Label3D" parent="InnerAirlockHatch/MeshLeft"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 1.1920929e-07, 0, -0.40624046)
pixel_size = 0.0075
text = "Airlock"
font = ExtResource("1_vjyse")

[node name="MeshRight" type="MeshInstance3D" parent="InnerAirlockHatch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.4, -1.5)
mesh = SubResource("BoxMesh_sbs5r")

[node name="Airlock" type="Label3D" parent="InnerAirlockHatch/MeshRight"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 1.1920929e-07, 0, -0.40624046)
pixel_size = 0.0075
text = "Airlock"
font = ExtResource("1_vjyse")

[node name="Lock_Unlock_Airlock" type="Area3D" parent="InnerAirlockHatch"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InnerAirlockHatch/Lock_Unlock_Airlock"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3113424e-07, -0.5, -1.5)
shape = SubResource("BoxShape3D_6p081")

[node name="Anima" type="AnimationPlayer" parent="."]
root_node = NodePath("../Hatch")
libraries = {
&"": SubResource("AnimationLibrary_f7nhf")
}
